--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-feather": "^2.0.10",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1"
   }
